--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,19 @@
 				"Homebrew": [["Concentration Room", "/roms/croom.nes"]]
 			})
 		});
-		
-		master = new joynes.Master(masterNes); 
+
+		// master = new joynes.Master(masterNes);
+
+    var emulator, socket = new WebSocket('ws://' + document.location.hostname + ':8080/');
+    socket.onmessage = function(evt) {
+      var message = JSON.parse(evt.data);
+      if (message.initialize) {
+        switch (message.initialize) {
+          case 'm': emulator = new joynes.Master(masterNes, socket);
+          case 's': emulator = new joynes.Slave(socket);
+        }
+      }
+    }
 	});
 </script>
 
@@ -20,15 +31,15 @@
 <div id="brief">
 	<div id="logo">JOYNES</div>
 	<div id="disclaimer">
-		Runs best on <a href="http://chrome.google.com">Google Chrome</a>, works with 
+		Runs best on <a href="http://chrome.google.com">Google Chrome</a>, works with
 		<a href="http://apple.com/safari">Safari</a>.
 	</div>
 	<br>
 	Enjoy multiplayer NES goodness with random strangers from around the world. Select a ROM to be first player. Visit
 	<a href="/slave">/slave</a> to be 2nd player.
 	<a href="http://nodeknockout.com/teams/copypastel" target="nko" title="Help me win Node.js KO!">
-		<img style="width: 123px; height: 63px; margin: 0 auto; display: block;" 
-				 src="http://nodeknockout.com/images/voteko.png" 
+		<img style="width: 123px; height: 63px; margin: 0 auto; display: block;"
+				 src="http://nodeknockout.com/images/voteko.png"
 				 alt="Help me win Node.js KO!" />
 	</a>
 </div>
