--- a/public/chad-code/style.css
+++ b/public/chad-code/style.css
@@ -1,9 +1,9 @@
 div#wrapper-main {
-
+	float: left;
 }
 
 div#continer-main {
-	
+	float	
 }
 
 div#container-tv {
@@ -12,7 +12,8 @@ div#container-tv {
 
 div#tv {
 	margin: auto;
-	width: 200px;
+	width: 100%;
+	float: left;
 
 }
 
@@ -21,6 +22,7 @@ div#tv p {
 	text-indent: -9999px;
 	height: 120px;
 	width: 105px;
+	margin: 50px 0 0 550px;
 }
 
 div#container-nes {
@@ -38,7 +40,8 @@ div#nes p {
 	text-indent: -9999px;
 	height: 40px;
 	width: 55px;
-	margin: -20px 0 0 200px;
+	margin: 0px 0 0 140px;
+	float: left;
 }
 
 div#container-games {
@@ -55,7 +58,8 @@ li#game1 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: 0 0 0 500px;
+	margin: 0 0 0 600px;
+	/*float: left;*/
 }
 
 li#game2 {
@@ -63,7 +67,8 @@ li#game2 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: -10px 0 0 445px;
+	margin: -10px 0 0 545px;
+	/*float: left;*/
 }
 
 li#game3 {
@@ -71,7 +76,8 @@ li#game3 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: 0 0 0 395px;
+	margin: 0 0 0 495px;
+	/*float: left;*/
 }
 
 li#game4 {
@@ -79,5 +85,22 @@ li#game4 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: -50px 0 0 410px;
+	margin: -50px 0 0 510px;
+	/*float: left;*/
 }
+
+div#container-floor {
+	margin: 0 200px 0 200px;
+}
+
+div#floor {
+	background: url(images/floor.png) no-repeat;
+	height: 383px;
+	width: 763px;
+}
+
+div#floor p {
+	text-indent: -9999px;
+
+}
+
