--- a/public/chad-code/style.css
+++ b/public/chad-code/style.css
@@ -1,37 +1,68 @@
-div#wrapper-main {
-	float: left;
+
+body {
+	background: black;
 }
 
-div#continer-main {
-	float	
+div#wrapper-main {
+	background: url(images/bg.png) no-repeat;
+	width: 1024px;
+	height: 768px;
+	margin: 0 auto;
+
+}
+
+div#container-main {
+	/*background: url(images/bg.png) no-repeat;*/
+
+}
+
+div#container-title {
+
+}
+
+div#title {
+	width:  100%;
+	height: auto;
+	clear: both;
+}
+
+div#title p {
+	background: url(images/title.png) no-repeat;
+	text-indent: -9999px;
+	width: 441px;
+	height: 96px;
+	margin: 0 auto;
 }
 
 div#container-tv {
-	width: 960px;
+	float: left;
+	margin: 200px 0 0 575px;
+	height: 120px;
+	/*overflow: hidden;*/
 }
 
 div#tv {
-	margin: auto;
-	width: 100%;
-	float: left;
-
-}
-
-div#tv p {
 	background: url(images/tv.png) no-repeat;
 	text-indent: -9999px;
 	height: 120px;
 	width: 105px;
-	margin: 50px 0 0 550px;
+	margin: 0 auto;
+	/*float: left;*/
+}
+
+div#tv p {
+
 }
 
 div#container-nes {
-	width: inherit;
+	float: left;
+	width: 55px;
+	height: 40px;
+	background: url(images/nes.png) no-repeat;
+	margin: 320px 0 0 20px;
 }
 
 div#nes {
-	width: 100px;
-	margin: 0 auto;
 
 }
 
@@ -40,17 +71,57 @@ div#nes p {
 	text-indent: -9999px;
 	height: 40px;
 	width: 55px;
-	margin: 0px 0 0 140px;
+	/*margin: 0px 0 0 140px;*/
+	/*float: left;*/
+}
+
+
+
+
+
+div#container-controllers {
+
+}
+
+div#controllers {
+
+}
+
+ul#controllers {
+
+}
+
+li#controller1 {
+	background: url(images/controller.png) no-repeat;
+	width: 23px;
+	height: 15px;
+	margin: 315px 0 0 -200px;
 	float: left;
 }
 
+li#controller2 {
+	background: url(images/controller.png) no-repeat;
+	width: 23px;
+	height: 15px;
+	margin: 300px 0 0 -250px;
+	float: left;
+}
+
+
+
+
+
+
+
+
+
 div#container-games {
-	
+	float: left;
 }
 
 ul {
 	list-style-type: none;
-	float: left;
+	/*float: left;*/
 }
 
 li#game1 {
@@ -58,7 +129,7 @@ li#game1 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: 0 0 0 600px;
+	margin: 0 0 0 700px;
 	/*float: left;*/
 }
 
@@ -67,7 +138,7 @@ li#game2 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: -10px 0 0 545px;
+	margin: -10px 0 0 645px;
 	/*float: left;*/
 }
 
@@ -76,7 +147,7 @@ li#game3 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: 0 0 0 495px;
+	margin: 0 0 0 595px;
 	/*float: left;*/
 }
 
@@ -85,11 +156,33 @@ li#game4 {
 	text-indent: -9999px;
 	height: 18px;
 	width: 28px;
-	margin: -50px 0 0 510px;
+	margin: -50px 0 0 610px;
 	/*float: left;*/
 }
 
-div#container-floor {
+div#container-couch {
+	float: left;
+	margin: -50px 0 0 -425px;
+	/*overflow: hidden;*/
+}
+
+div#couch {
+	background: url(images/couch.png) no-repeat;
+	/*text-indent: -9999px;	*/
+	width: 195px;
+	height: 150px;
+	/*width: -25px 0 0 -375px;*/
+}
+
+div#container-bg {
+	width: 100%;
+}
+
+div#bg {
+
+}
+
+/*div#container-floor {
 	margin: 0 200px 0 200px;
 }
 
@@ -102,13 +195,17 @@ div#floor {
 div#floor p {
 	text-indent: -9999px;
 
-}
+}*/
+
+/**************************************************
+Game Hover States
+**************************************************/
 
 li.game {
 	cursor: pointer;
 }
 
-li#game1:hover {
+/*li#game1:hover {
 	background: url(images/contra.png);
 	width: 347px;
 	height: 392px;
@@ -130,4 +227,7 @@ li#game4:hover {
 	background: url(images/drmario.png);
 	width: 347px;
 	height: 392px;
-}
+}*/
+
+/**************************************************
+**************************************************/
