--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,9 +41,6 @@
   };
 
   document.onready = function() {
-    document.getElementById("nes").onclick = function() {
-      pair();
-    };
     var games = document.getElementsByClassName("game");
     for(var i = 0; i < games.length; i++) {
       games.item(i).onclick = function(event) {
@@ -69,11 +66,12 @@
 	<div id="container-main" >
 		<div id="container-title">
 			<div id="title">
-				<p>This is the title.</p>
+        <!-- <p>This is the title.</p> -->
 			</div>
 		</div>
 		<div id="container-tv">
 			<div id="tv">
+        <div id="emulator"></div>
 				<!-- <p>This is a tv.</p> -->
 			</div>
 		</div>
@@ -116,4 +114,3 @@
 	</div>
 </div>
 
-<div id="emulator"></div>
