--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/dynamicaudio-min.js"></script>
     <script type="text/javascript" src="/js/jquery.dimensions.min.js"></script>
