Cleanup multiplayer merge.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     // Display sessionId
     socket.on("connect", function(evt) {
       var sessionId = document.createElement("div");
-      document.querySelector("#sessionId").innerHTML = sessionId;
+      //document.querySelector("#sessionId").innerHTML = sessionId;
     });
 
     socket.on("role", function(evt) {
