Fix emulator screen positioning.
Wasn't relative to container, zooming page would break position.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
         nesScreen.
           css("-webkit-transform", "skewY(0) scale(5)").
           css("left", "-79px");
-        $("#wrapper-main").css("opacity", "0.4");
+        $("#container-main").css("opacity", "0.4");
       }, timeout);
     }
   }
@@ -166,6 +166,6 @@
 			</div>
 		</div> -->
 	</div>
+  <div id="emulator"></div>
 </div>
-<div id="emulator"></div>
 
