--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,17 +4,18 @@ body {
 }
 
 div#wrapper-main {
-	background: url(/images/bg.png) no-repeat;
+  position: relative;
+	margin: 0 auto;
 	width: 1024px;
 	height: 768px;
-	margin: 0 auto;
-  -webkit-transition: opacity 0.5s ease-in;
 }
 
 div#container-main {
   padding-top: 100px;
-  position: relative;
-	/*background: url(/images/bg.png) no-repeat;*/
+	background: url(/images/bg.png) no-repeat;
+	width: 100%;
+	height: 100%;
+  -webkit-transition: opacity 0.5s ease-in;
 }
 
 div#container-title {
@@ -52,10 +53,10 @@ div#tv {
 
 #emulator {
   position: absolute;
-  top: 309px;
-  left: 622px;
+  top: 301px;
+  left: 576px;
   width: 41px;
-  height: 47px;
+  height: 67px;
 }
 
 div#container-nes {
@@ -96,7 +97,7 @@ div#nes p {
   width: 41px;
   height: 47px;
   -webkit-transform: skewY(26deg);
-  -webkit-transition: all 0.5s ease-in;
+  -webkit-transition: -webkit-transform 0.5s ease-in, left 0.5s ease-in;
   position: relative;
   top: 36px;
   left: 7px;
