--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,17 +81,6 @@ div#nes p {
 	/*float: left;*/
 }
 
-#poster img {
-  position: absolute;
-  -webkit-transform: skewY(-26deg);
-  height: 130px;
-  width: 80px;
-  position: absolute;
-  display: none;
-  top: 210px;
-  left: 300px;
-}
-
 /* Try to change this to #screen */
 .nes-screen {
   width: 41px;
@@ -127,10 +116,15 @@ div#container-controllers {
 }
 
 
-div#container-games {
+#container-games {
   top: 470px;
   left: 650px;
   position: absolute;
+}
+
+#games {
+  width: 100%;
+  height: 100%;
 }
 
 ul {
@@ -138,7 +132,7 @@ ul {
 	/*float: left;*/
 }
 
-.game {
+#games li {
   cursor: pointer;
 	background: url(/images/game.png) no-repeat;
 	text-indent: -9999px;
@@ -149,34 +143,52 @@ ul {
   left: 0px;
 }
 
-li#game2 {
-	background: url(/images/game.png) no-repeat;
-	text-indent: -9999px;
-	height: 18px;
-	width: 28px;
+#games li:nth-child(2) {
   left: -55px;
   top: -10px;
-	/*float: left;*/
 }
 
-li#game3 {
-	background: url(/images/game.png) no-repeat;
-	text-indent: -9999px;
-	height: 18px;
-	width: 28px;
+#games li:nth-child(3) {
   left: 15px;
   top: 20px;
-	/*float: left;*/
 }
 
-li#game4 {
-	background: url(/images/game.png) no-repeat;
-	text-indent: -9999px;
-	height: 18px;
-	width: 28px;
+#games li:nth-child(4) {
   top: 40px;
   left: -10px;
 }
+
+#posters li {
+  position: absolute;
+  -webkit-transform: skewY(-26deg);
+  height: 130px;
+  width: 80px;
+  position: absolute;
+  opacity: 0;
+  display: block;
+  top: 210px;
+  left: 300px;
+  background-size: 100%;
+  -webkit-transition: opacity 0.5s linear;
+}
+
+#posters li:nth-child(1) {
+  background: url(/images/dr_mario.png);
+}
+
+#posters li:nth-child(2) {
+  background: url(/images/contra.png);
+}
+
+#posters li:nth-child(3) {
+  background: url(/images/bubble_bobble.png);
+}
+
+#posters li:nth-child(4) {
+  background: url(/images/bubble_bobble_2.png);
+}
+
+
 
 div#container-couch {
   position: absolute;
