--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Copypastel presents: Joynes</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
