--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,22 @@ div#title {
 	clear: both;
 }
 
+div#message-box {
+  position: absolute;
+  top: 300px;
+	height: 120px;
+  width: 300px;
+  background-color: white;
+  margin: 0 auto;
+  display: none;
+}
+
+div#message-box-confirm {
+  width: 50px;
+  height: 50px;
+  background-color: #ffbb00;
+}
+
 div#shareId {
   color: white;
   font-weight: bold;
