--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,13 +29,16 @@ div#title {
 }
 
 div#message-box {
-  position: absolute;
   top: 300px;
 	height: 120px;
   width: 300px;
-  background-color: white;
   margin: 0 auto;
-  display: none;
+}
+
+div#message-box span{
+  background-color: gray;
+  width: 100%;
+  height: 100%;
 }
 
 div#message-box-confirm {
