Added structure to style the share feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -192,6 +192,20 @@
 			<div id="title">
         <div id="shareId">Share this game! <span></span></div>
         <!-- <p>This is the title.</p> -->
+
+          <div id="share-container">
+          <div id="shareId">
+
+            <h3>Share this game!</h3>
+            <div id="share-button-container">
+              <div id="share-button">
+                <p>Copy This Link</p>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+
 			</div>
 		</div>
     <div id="container-message-box">
